# nikos-discord-bot

./: .gitignore  Cargo.toml  GEMINI.md  LICENSE  README.md  example-config.yaml  run-dev.sh  run.sh
src/: main.rs  types.rs  ui.rs
src/commands/: core.rs  general.rs  mod.rs  silly.rs
