[package]
name = "nikos-discord-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
poise = "0.6.2"
pyo3 = { version = "0.28", features = ["auto-initialize"] }
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1", features = ["full"] }
which = "6.0"
